# ciFHEr

./: .dockerignore  .gitignore  Anchor.toml  CONTEXT.md  Dockerfile  README.md  package.json
fhe-sidecar/: Cargo.toml
fhe-sidecar/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  Docs.css  Docs.tsx  Landing.css  Landing.tsx  index.css  main.tsx
frontend/src/components/: BalanceDisplay.tsx  CiphertextPanel.css  CiphertextPanel.tsx  MintPanel.tsx  SwapPanel.tsx  TransferPanel.tsx
frontend/src/hooks/: useAuth.ts  useConfidentialToken.ts  useFhe.ts  useWorkerBusy.tsx  useWorkerHealth.ts
frontend/src/idl/: confidential_swap.json
frontend/src/utils/: constants.ts  fhe.ts  program.ts
programs/confidential-swap/: Cargo.toml
programs/confidential-swap/src/: lib.rs
programs/confidential-token/: Cargo.toml
programs/confidential-token/src/: lib.rs
sdk/: README.md  package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  index.ts  program.ts  types.ts  worker.ts
sdk/src/idl/: confidential_swap.json  confidential_token.json
tests/: confidential-token.ts
worker/: .env.example  package.json  tsconfig.json
worker/src/: auth.ts  burn.ts  fhe.ts  index.ts  mint.ts  program.ts  swap.ts  transfer.ts  types.ts
worker/src/idl/: confidential_token.json
